# AndroidDemo

./: README.md
AnimationDemo/app/: build.gradle
AnimationDemo/app/release/: app-release.apk
AnimationDemo/app/src/androidTest/java/com/example/luoluo/animationdemo/: ExampleInstrumentedTest.java
AnimationDemo/app/src/main/: AndroidManifest.xml
AnimationDemo/app/src/main/java/com/example/luoluo/animationdemo/: LLCustomView.java  MainActivity.java
AnimationDemo/app/src/main/res/anim/: alpha_anim.xml
AnimationDemo/app/src/main/res/layout/: activity_main.xml
AnimationDemo/app/src/main/res/values/: styles.xml
AnimationDemo/app/src/test/java/com/example/luoluo/animationdemo/: ExampleUnitTest.java
AnimationDemo/gradle/wrapper/: gradle-wrapper.properties
AudioPlayer/app/: CMakeLists.txt  build.gradle
AudioPlayer/app/src/androidTest/java/com/example/luoluo/audioplayer/: ExampleInstrumentedTest.java
AudioPlayer/app/src/main/: AndroidManifest.xml
AudioPlayer/app/src/main/cpp/: audio_encoder.c  audio_encoder.h  native-lib.cpp
AudioPlayer/app/src/main/java/com/example/luoluo/audioplayer/: LLRecoder.java  MainActivity.java
AudioPlayer/app/src/main/jniLibs/include/libavutil/: ffversion.h
AudioPlayer/app/src/main/res/layout/: activity_main.xml
AudioPlayer/app/src/test/java/com/example/luoluo/audioplayer/: ExampleUnitTest.java
AudioPlayer/gradle/wrapper/: gradle-wrapper.properties
Cartoon/: build.gradle  settings.gradle
Cartoon/app/: build.gradle
Cartoon/app/src/main/: AndroidManifest.xml
Cartoon/app/src/main/cpp/: native-lib.cpp
Cartoon/app/src/main/res/drawable-xhdpi/: backgroud_edite_text.xml  background_button_login.xml  background_guide_immediate_experience.xml
Cartoon/app/src/main/res/layout/: activity_guide.xml  activity_login_phone.xml  activity_main.xml  activity_register_phone.xml  fragment_bookself.xml  fragment_home.xml  fragment_me.xml  module_home_banner.xml  module_home_mid.xml  module_home_mid_title.xml  view_guide_item.xml  view_home_tabbar.xml  view_item.xml  view_mid_item.xml
Cartoon/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Cartoon/gradle/wrapper/: gradle-wrapper.properties
Cartoon/okgo/: build.gradle
Cartoon/okrx2/: build.gradle
LLACamera/app/: CMakeLists.txt  build.gradle
LLACamera/app/release/: app-release.apk
LLACamera/app/src/androidTest/java/com/example/luoluo/llacamera/: ExampleInstrumentedTest.java
LLACamera/app/src/main/: AndroidManifest.xml
LLACamera/app/src/main/cpp/: native-lib.cpp
LLACamera/app/src/main/java/com/LLCamera/: LLACamera.java
LLACamera/app/src/main/java/com/example/luoluo/Util/: LLUtil.java
LLACamera/app/src/main/java/com/example/luoluo/llacamera/: LLAHardEncode.java  LLCamreaActivity.java  MainActivity.java
LLACamera/app/src/main/java/com/example/luoluo/llacamera/Model/: VideoFrameModel.java
LLACamera/app/src/main/jniLibs/arm64-v8a/objs/ffmpegjni/: CarEyeDecoderAPI.o.d  CarEyeEncoderAPI.o.d  CarEyeJni.o.d  CarEyeMPEGAPI.o.d  CarEyeOSDAPI.o.d  FFVideoFilter.o.d
LLACamera/app/src/main/jniLibs/armeabi-v7a/objs/ffmpegjni/: CarEyeDecoderAPI.o.d  CarEyeEncoderAPI.o.d  CarEyeJni.o.d  CarEyeMPEGAPI.o.d  CarEyeOSDAPI.o.d  FFVideoFilter.o.d
LLACamera/app/src/main/jniLibs/armeabi/objs/ffmpegjni/: CarEyeDecoderAPI.o.d  CarEyeEncoderAPI.o.d  CarEyeFilter_interface.o.d  CarEyeJni.o.d  CarEyeMPEGAPI.o.d  CarEyeOSDAPI.o.d  FFVideoFilter.o.d
LLACamera/app/src/main/jniLibs/x86/objs/ffmpegjni/: CarEyeDecoderAPI.o.d  CarEyeEncoderAPI.o.d  CarEyeJni.o.d  CarEyeMPEGAPI.o.d  CarEyeOSDAPI.o.d  FFVideoFilter.o.d
LLACamera/app/src/main/res/drawable/: llshap.xml
LLACamera/app/src/main/res/layout/: activity_llcamera.xml  activity_main.xml
LLACamera/app/src/main/res/values/: strings.xml
LLACamera/app/src/test/java/com/example/luoluo/llacamera/: ExampleUnitTest.java
LLACamera/gradle/wrapper/: gradle-wrapper.properties
interractiveDemo/app/: build.gradle
interractiveDemo/app/src/main/: AndroidManifest.xml
interractiveDemo/app/src/main/res/layout/: activity_main.xml  fragment_home2.xml  fragment_image.xml  fragment_me.xml  fragment_message_list.xml  recycler_liveitem.xml  recycler_liveitem_first.xml  recycler_liveitem_title.xml
interractiveDemo/app/src/main/res/values/: colors.xml  strings.xml
interractiveDemo/gradle/wrapper/: gradle-wrapper.properties
(+50 files in other folders)
